bond: add modemnum

--- a/configs/init/bond.rc
+++ b/configs/init/bond.rc
@@ -6,17 +6,44 @@ on boot
     write /sys/kernel/rcc/event PASSIVE_MODE
     write /sys/kernel/rcc/max_anon_clean_size 512M
     write /sys/kernel/rcc/enable 1
-    
+
     #disable hmp rt optimization
     write /sys/kernel/hmp/rt_opt 0
 
 on property:sys.boot_completed=1
     write /sys/kernel/rcc/event BOOT_COMPLETE
+
+#Modemnum
+on property:ro.boot.product.hardware.sku=BND-AL00
+    setprop ro.odm.config.modem_number 1
     
+on property:ro.boot.product.hardware.sku=BND-AL10
+    setprop ro.odm.config.modem_number 1
+
+on property:ro.boot.product.hardware.sku=BND-TL10
+    setprop ro.odm.config.modem_number 1
+
+on property:ro.boot.product.hardware.sku=BND-L21
+    setprop ro.odm.config.modem_number 1
+
+on property:ro.boot.product.hardware.sku=BND-L22
+    setprop ro.odm.config.modem_number 1
+
+on property:ro.boot.product.hardware.sku=BND-L24
+    setprop ro.odm.config.modem_number 1
+
+on property:ro.boot.product.hardware.sku=BND-L31
+    setprop ro.odm.config.modem_number 1
+
+on property:ro.boot.product.hardware.sku=BND-L2
+    setprop ro.odm.config.modem_number 1
+    
+on property:ro.boot.product.hardware.sku=BND-L34
+    setprop ro.odm.config.modem_number 1
+
 # Service add below.
-service CameraDaemon /vendor/bin/CameraDaemon hi6250 BOND
+service CameraDaemon /vendor/bin/CameraDaemon hi6250 ANNE
     class main
     user media
     group audio camera inet net_bt net_bt_admin net_bw_acct drmrpc mediadrm system dsm
     writepid /dev/cpuset/top-app/tasks /dev/stune/top-app/tasks
-
